<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartMenu">

         <ImageView
            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
            android:src="@drawable/starter"/>
        <Button
            android:id="@+id/lg_langDropDownBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/lg_langDropdown_txt_en"
            android:textColor="@color/colorWhite"
           android:layout_centerHorizontal="true"
            android:background="@drawable/lang_btn"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
            android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/lower_circuar"
           android:orientation="vertical"
        android:weightSum="1"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:gravity="center"
                android:textSize="@dimen/text_24"
                android:textColor="@color/textMain"
                android:text="@string/transfer_data_with_ease_through_out_all_devices"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_weight="0.3"
            android:gravity="center_horizontal">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sm_log_in"
                android:paddingVertical="@dimen/margin_10"
                android:paddingHorizontal="50dp"
                android:textSize="@dimen/text_16"
                android:textAllCaps="false"
                android:text="@string/lg_log_in"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:background="@drawable/log_btn"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sm_sign_in"
                android:paddingVertical="@dimen/margin_10"
                android:paddingHorizontal="50dp"
                android:textSize="@dimen/text_16"
                android:textAllCaps="false"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"
                android:background="@drawable/sign_btn"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|top"
                android:text="@string/continue_without_signing_up"/>
        </LinearLayout>
        </LinearLayout>

</RelativeLayout>