<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_30"
        android:gravity="center">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/log_tabLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabIndicatorHeight="2dp"
            android:background="@drawable/border_bottom"
            />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/edtNameOrEmail"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14"
            android:paddingLeft="5dp"
            android:text="@string/lg_username"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearUserName"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="1">
        <EditText
            android:id="@+id/logName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_10"
            android:layout_weight="0.7"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext"
            android:nextFocusRight="@+id/logNameNo"
            android:maxLines="1" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_21"
                android:gravity="center_horizontal|bottom"
                android:layout_marginVertical="@dimen/margin_10"
                android:paddingBottom="5dp"
                android:text="#"
                android:layout_weight="0.1"/>
            <EditText
                android:id="@+id/logNameNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_10"
                android:layout_weight="0.2"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/logPassword"
                android:maxLines="1" />
        </LinearLayout>
        <EditText
            android:id="@+id/logEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_10"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:visibility="gone"
            android:nextFocusRight="@+id/logNameNo"
            android:maxLines="1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14"
            android:paddingLeft="5dp"
            android:text="@string/lg_password"/>
        <EditText
            android:id="@+id/logPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:drawableRight="@drawable/ic_baseline_visibility_24"
            android:paddingRight="@dimen/margin_10"
            android:layout_marginVertical="@dimen/margin_10"
            android:inputType="textPassword"
            android:maxLines="1" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/logLogIn"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/enabled_button"
                    android:layout_gravity="center"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/lg_log_in"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_14" />
            </FrameLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:indeterminateTint="@android:color/white"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/al_forgot_pass"
            android:textSize="@dimen/text_14"
            android:padding="5dp"
            android:text="@string/lg_forgot_your_password"/>

   </LinearLayout>
</RelativeLayout>